# fastapi-task

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
app/: main.py
app/core/: auth.py  config.py  database.py  dependencies.py  utils.py
app/exceptions/: airportException.py  baseExcption.py  flightException.py  userService.py
app/external_apis/: flightAdaptor.py  mock_api.py
app/infrastructure/: airportRepository.py  baseRepository.py  models.py  orderRepository.py  passengerRepository.py  ticketRepository.py  userRepository.py
app/interfaces/: airports_api.py  flights_api.py  orders_api.py  passengers_api.py  users_api.py
app/selectors/: airportSelector.py  flightSelector.py  passengersSelector.py  userSelector.py
app/services/: orderService.py  passengerService.py  userService.py
migration/: env.py
tests/: conftest.py
tests/test_repository_layer/: test_airport_repo.py  test_order_repo.py  test_passenger_repo.py  test_ticket_repo.py  test_user_repo.py
tests/test_service_layer/: test_order_service.py
