[project]
name = "fastapi-task"
version = "0.1.0"
description = "task for top company"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.118.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.1.1",
    "sqlalchemy[asyncio]==2.0.43",
    "uvicorn==0.37.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff==0.13.2",
]




[tool.ruff]
line-length = 88
target-version = "py312"
extend-select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "B",   # bugbear (common bugs)
  "UP",  # pyupgrade
  "C90", # mccabe complexity
]



[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["my_app"]
force-single-line = false
split-on-trailing-comma = true
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
